Rename plugin from slideshow to presentation
Renames all commands, template, plugin descriptor, paths (Plugins/slideshow
→ Plugins/presentation), and docs. GitHub repo already renamed to
forge-plugin-presentation.

--- a/forge-plugin.yml
+++ b/forge-plugin.yml
@@ -1,5 +1,5 @@
-name: slideshow
-display-name: Slideshow Presentations
+name: presentation
+display-name: Presentations
 description: Generate and serve Slidev presentations from any Forge artifact
 version: v1.0
 author: loehnertz
